<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="tab_text_1">News</string>
    <string name="tab_text_2">Analyze</string>
    <string name="tab_text_3">History</string>

    <string name="image_classification_failed">Image Classifier failed to initialize</string>
    <string name="prediction_result">PREDICTION RESULT</string>
    <string name="result_score">Prediction :</string>
    <string name="confidence_score">Confidence Score :</string>
    <string name="score_result">Score Result</string>
    <string name="save_prediction_history">Save Prediction History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">Tab Layout</string>
</resources>