<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="Image to Analyze"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder"
            tools:ignore="HardcodedText" />

        <TableLayout
            android:id="@+id/tb_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="2dp"
            android:padding="4dp"
            android:showDividers="middle">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:text="@string/prediction_result"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:text="@string/result"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:text="@string/confidence_score"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/percentage_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:text="@string/score_result"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/save_prediction_history"
            />
    </LinearLayout>
</ScrollView>